--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -81,18 +81,22 @@ body, .centratore {
     background-position: left;
 } */
 
-#page3{
+/* #page3{
     background:
     linear-gradient(
       rgba(0, 0, 0, 0.7), 
       rgba(0, 0, 0, 0.7)
     ), 
-    url("images/wallpepars/jungle.jpg") ; 
+    url("images/wallpepars/chess3.jpg") ; 
     background-repeat: repeat ;
     background-size: 100vh ;
     min-height: 100vh ;
-    height: 100% ;
-    background-position: center ;
+    width: 100% ;
+    background-position: center  ;
+} */
+
+#page3{
+    background-color: black;
 }
 
 /* #page4{
@@ -109,7 +113,7 @@ body, .centratore {
     background-position: center ;
 } */
 
-#page4{
+/* #page4{
     background:
     url("images/wallpepars/space.jpeg") ; 
     background-repeat: repeat ;
@@ -117,6 +121,10 @@ body, .centratore {
     min-height: 100vh ;
     height: 100% ;
     background-position: center ;
+} */
+
+#page4{
+    background-color: black;
 }
 
 #page5{
@@ -374,10 +382,9 @@ body, .centratore {
         margin-bottom: 15px;
     }
 
-    #page3 .fa-bars{
-        margin-top: 20px;
-        margin-left: 0px;
-    }
+
+
+
 }
 
 @media screen and (min-width: 460px) and (min-height: 620px){
@@ -402,10 +409,7 @@ body, .centratore {
         margin-bottom: 15px;
     }
 
-    #page3 .fa-bars{
-        margin-top: 30px;
-        margin-left: 0px;
-    }
+
 }
 
 
