--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,6 +9,8 @@
 /* ---------------------------- INITIAL ---------------------------------------- */
 /* ----------------------------------------------------------------------------- */
 
+
+
 body,html {
     height: 100%;
     margin: 0px;
@@ -98,30 +100,6 @@ body, .centratore {
 #page3{
     background-color: black;
 }
-
-/* #page4{
-    background:
-    linear-gradient(
-      rgba(0, 0, 0, 0.7), 
-      rgba(0, 0, 0, 0.7)
-    ), 
-    url("images/wallpepars/jungle.jpg") ; 
-    background-repeat: repeat ;
-    background-size: 100vh ;
-    min-height: 100vh ;
-    height: 100% ;
-    background-position: center ;
-} */
-
-/* #page4{
-    background:
-    url("images/wallpepars/space.jpeg") ; 
-    background-repeat: repeat ;
-    background-size: 100vh ;
-    min-height: 100vh ;
-    height: 100% ;
-    background-position: center ;
-} */
 
 #page4{
     background-color: black;
@@ -272,22 +250,6 @@ body, .centratore {
         border-bottom: 3px solid black;
     }
 
-/*     &:active {
-        margin-left: 10px;
-        margin-top: 10px;
-        &::before {
-            bottom: -5px;
-            height: 5px;
-            left: 3px;
-        }
-        
-        &::after {
-            right: -5px;
-            width: 5px;
-            bottom: -3px;
-        } 
-    } */
-
 }
 
 #modalz:before{
@@ -312,7 +274,7 @@ body, .centratore {
     margin-top: 25px;
     margin-left: 10px;
     position: absolute;   
-    font-size: 30px;
+    font-size: 27px;
 }
 
 .call_button {
@@ -337,81 +299,151 @@ body, .centratore {
     margin: 3px ;
 }
 
-/* .players_counter {
-    height: 40px;
-    width: 300px;
-    border-radius: 30px;
-    margin-top: 22px;
-    margin-bottom: 15px;
-    border: 3px solid #EDEB52;
-    color: white; 
-    background-color: #EE3634 !important;
-} */
-
-/* .players_counter p {
-    margin: 0;
-} */
-
-/* #scarabeo {
+#scarabeo {
     width: 100%;
     margin-bottom: 15px;
-} */
+}
+/* ----------------------------------------------------------------------------- */
+/* ---------------------- PAGE 2 RANK RESPONSIVE ------------------------------ */
+/* ----------------------------------------------------------------------------- */
+
+
+.banner-board-helper{
+    justify-content: center;
+} 
+
+@media screen and (max-width: 899px) {
+    #scarabeo {
+        width: 100%;
+        margin-bottom: 15px;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    #scarabeo {
+        width: auto;
+        margin-bottom: 15px;
+    }
+}
+
+
 
 /* ----------------------------------------------------------------------------- */
 /* ---------------------- PAGE 3 BOARD RESPONSIVE ------------------------------ */
 /* ----------------------------------------------------------------------------- */
 
-@media screen and (min-width: 350px) and (min-height: 550px){
+
+@media screen and (min-width: 10px) and (min-height: 10px){
     .board{
-        width: 350px;
+        width: 200px;
         /* height: 450px; */
     }
     .board-player{
-        
-        width: calc(350px - 30px) ;
+        width: calc(200px - 30px)
     }
-    .avatar_helper_1{
-        display: none;
-    }
-    .banner-board-helper{
-        justify-content: space-around;
-    }
-
-    #scarabeo {
-        width: 100%;
-        margin-bottom: 15px;
-    }
-
-
-
 
 }
 
-@media screen and (min-width: 460px) and (min-height: 620px){
+@media screen and (min-width: 319px) and (min-height: 403px){
     .board{
-        width: 437.5px;
-        /* height: 562.5px; */
+        width: 250px;
+        /* height: 450px; */
     }
     .board-player{
-        width: calc(437.5px - 30px) ;
+        width: calc(250px - 30px)
     }
-
-    .banner-board-helper{
-        justify-content: space-around;
-    }
-
-    .avatar_helper_1{
-        display: inline;
-    }
-
-    #scarabeo {
-        width: auto;
-        margin-bottom: 15px;
-    }
-
 
 }
 
+@media screen and (min-width: 348px) and (min-height: 500px){
+    .board{
+        width: 280px;
+        /* height: 450px; */
+    }
+    .board-player{
+        width: calc(280px - 30px)
+    }
+
+}
+
+@media screen and (min-width: 370px) and (min-height: 542px){
+    .board{
+        width: 350px;
+        /* height: 450px; */
+        
+    }
+    .board-player{
+        width: calc(350px - 30px)
+    }
+    
+
+}
+
+@media screen and (min-width: 482px) and (min-height: 590px){
+    .board{
+        width: 340px;
+        /* height: 450px; */
+    }
+    .board-player{
+        width: calc(340px - 30px)
+    }
+
+}
+
+@media screen and (min-width: 638px) and (min-height: 638px){
+    .board{
+        width: 390px;
+        /* height: 450px; */
+    }
+    .board-player{
+        width: calc(390px - 30px)
+    }
+
+}
+
+@media screen and (min-width: 662px) and (min-height: 730px){
+    .board{
+        width: 430px;
+        /* height: 450px; */
+    }
+    .board-player{
+        width: calc(430px - 30px)
+    }
+
+}
+
+@media screen and (min-width: 700px) and (min-height: 750px){
+    .board{
+        width: 490px;
+        /* height: 450px; */
+    }
+    .board-player{
+        width: calc(490px - 30px)
+    }
+
+}
+
+@media screen and (min-width: 710px) and (min-height: 850px){
+    .board{
+        width: 550px;
+        /* height: 450px; */
+    }
+    .board-player{
+        width: calc(550px - 30px)
+    }
+
+}
+
+@media screen and (min-width: 795px) and (min-height: 969px){
+    .board{
+        width: 700px;
+        /* height: 450px; */
+    }
+    .board-player{
+        width: calc(700px - 30px)
+    }
+
+}
 
 
 /* ----------------------------------------------------------------------------- */
@@ -647,12 +679,9 @@ body, .centratore {
 
 .ra{
     z-index: 10;
-    /* margin-bottom: 100px; */
     width: 140px;
     margin-left: 20px;
     height: auto;
-    /* margin-left: -106px; */
-    /* position: absolute; */
 }
 
 .fa-gamepad:before{
