--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -141,6 +141,11 @@ body, .centratore {
     margin-bottom: 0 !important;
 }
 
+
+
+
+
+
 #page3 .allineatore2{
     height: 100vh;
 }
@@ -156,16 +161,19 @@ body, .centratore {
 /* -------------------------- MENU PAGE BUTTONS -------------------------------- */
 /* ----------------------------------------------------------------------------- */
 
+
+
 .bt {
     z-index: 2;
     position: absolute;
     display: flex;
-    bottom: 35px;
+    bottom: 55px;
     margin-left:55px;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     border-radius: 20px;
+    flex-direction: column !important;
 }
 
 .bt a {
@@ -186,13 +194,13 @@ body, .centratore {
 
 .bt i {
     color: white;
-    font-size: 25px;
+    font-size: 45px;
 }
 
 .square {
     background-color: black;
-    width: 75px;
-    height: 75px;
+    width: 105px;
+    height: 105px;
     border-radius: 20%;
     display: flex;
     justify-content: center;
@@ -201,7 +209,7 @@ body, .centratore {
 }
 
 .bt #buttton_v_1 {
-    height: 20px;
+    height: 30px;
 }
 
 .bt #buttton_v_2 {
@@ -249,8 +257,23 @@ body, .centratore {
         border-right: 3px solid black;
         border-bottom: 3px solid black;
     }
+}
+
+.ra{
+    display: none !important;
+}
+
+
+
+@media screen and (min-height: 700px){
+    .bt {
+        margin-bottom: 100px;
+    }
 
 }
+
+/* ----------------------------------------------------------------------------- */
+
 
 #modalz:before{
     background-color: darken(red, 25%);
@@ -303,6 +326,23 @@ body, .centratore {
     width: 100%;
     margin-bottom: 15px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+/* ----------------------------------------------------------------------------- */
+/* ---------------------- PAGE 1 MENU RESPONSIVE ------------------------------ */
+/* ----------------------------------------------------------------------------- */
+
+
 /* ----------------------------------------------------------------------------- */
 /* ---------------------- PAGE 2 RANK RESPONSIVE ------------------------------ */
 /* ----------------------------------------------------------------------------- */
@@ -436,11 +476,11 @@ body, .centratore {
 
 @media screen and (min-width: 795px) and (min-height: 969px){
     .board{
-        width: 700px;
+        width: 650px;
         /* height: 450px; */
     }
     .board-player{
-        width: calc(700px - 30px)
+        width: calc(650px - 30px)
     }
 
 }
