--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -52,7 +52,7 @@ body, .centratore {
 /* ---------------------------- LAYOUT PAGES ----------------------------------- */
 /* ----------------------------------------------------------------------------- */
 
-#page1{
+/* #page1{
     background:
     linear-gradient(
       rgba(0, 0, 0, 0.1), 
@@ -63,9 +63,9 @@ body, .centratore {
     background-repeat: repeat;
     min-height: 100vh;
     background-size: cover;
-}
+} */
 
-#page2{
+/* #page2{
     background:
     url("images/wallpepars/space.jpeg"); 
     background-repeat: repeat;
@@ -74,7 +74,7 @@ body, .centratore {
     height: 100%;
     width: 100%;
     background-position: top;
-}
+} */
 
 /* #page3{
     background:
