--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -119,6 +119,7 @@ body, .centratore {
     background-position: center ;
 }
 
+
 /* ----------------------------------------------------------------------------- */
 /* --------------------------- UTILITY CONTAINERS ------------------------------ */
 /* ----------------------------------------------------------------------------- */
@@ -268,11 +269,15 @@ body, .centratore {
 
 #page2 .record{
     margin: 3px ;
+    width: 100%;
 }
 
 #page4 .record{
     width: 280px ;
     border:1px solid white;
+}
+.refresh-button{
+    width: 100%;
 }
 
 #scarabeo {
@@ -520,7 +525,7 @@ body, .centratore {
 @media screen and (min-width: 460px) and (min-height: 200px){
     .avatar{
         width: 290px;
-        margin-top: 35px;
+        /* margin-top: 35px; */
         border-radius: 35px;
         /* background-color: #3C5FA1;
         background-color: #EE3734;
@@ -535,6 +540,12 @@ body, .centratore {
     #avataricon{
         width: 80px;
     }
+}
+
+#page4 .record{
+    margin-bottom:10px;
+    border: 2px solid white;
+    border-radius: 10px;
 }
 
 
@@ -596,9 +607,14 @@ body, .centratore {
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-    padding-top: 1rem;
+    background:
+    linear-gradient(
+    rgba(0, 0, 0, 0.7), 
+    rgba(0, 0, 0, 0.7)
+    ),
+    /* url("images/board/water4.jpg"); */
+    /* padding-top: 1rem; */
+    
     /* animation: fade-in 0.6s; */
     /* font-family: 'VT323', monospace ; */
     /* font-size: 20px !important; */
@@ -626,16 +642,11 @@ body, .centratore {
 
 .modal-content {
 
-    background:
-    linear-gradient(
-    rgba(0, 0, 0, 0.1), 
-    rgba(0, 0, 0, 0.1)
-    ),
-    url("images/board/water2.png");
+    background-color: #00b3ff;
     border-radius: 30px;
     margin: 15% auto;
     padding: 20px;
-    /* border: 5px solid BLACK; */
+    /* border: 8px solid BLACK; */
     width: 280px;
     height: fit-content;
 }
