--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -608,10 +608,10 @@ body, .centratore {
     overflow: auto; /* Enable scroll if needed */
     background:
     linear-gradient(
-    rgba(0, 0, 0, 0.7), 
-    rgba(0, 0, 0, 0.7)
+    rgba(0, 0, 0, 0.4), 
+    rgba(0, 0, 0, 0.4)
     ),
-    /* url("images/board/water4.jpg"); */
+    url("images/board/water4.jpg");
     /* padding-top: 1rem; */
     
     /* animation: fade-in 0.6s; */
