--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -598,7 +598,7 @@ body, .centratore {
  
 .modal img {width: 100px;}
 
-.modal button{
+.modal button, #console-screen{
     width: 200px;
     min-height: 60px;
     /* border-radius: 20px; */
@@ -607,6 +607,12 @@ body, .centratore {
     border : 2px solid white;
     padding :19px;
     border-radius: 30px;
+}
+
+#console-screen{
+    border : 2px solid white;
+    border-radius: 0px;
+
 }
 
 .modal {
